# swagger/swagger.json
@@ -15,24 +15,44 @@
     },
     "basePath": "/api",
     "paths": {
-        "/metadata/": {
+        "/demo/": {
             "get": {
                 "tags": [
-                    "metadata"
+                    "demo"
                 ],
-                "description": "get Meta",
-                "operationId": "MetaController.Get all data of metadata",
+                "description": "get demos",
+                "operationId": "DemoController.GetAll",
                 "parameters": [
                     {
                         "in": "query",
-                        "name": "type",
-                        "description": "type",
+                        "name": "size",
+                        "description": "size per page",
+                        "required": true,
                         "type": "string"
                     },
                     {
                         "in": "query",
-                        "name": "platform_key",
-                        "description": "platform_key",
+                        "name": "page",
+                        "description": "page number (\u003e 0)",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "search",
+                        "description": "search",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "name",
+                        "description": "name of demo",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "age",
+                        "description": "age of demo",
                         "type": "string"
                     }
                 ],
@@ -42,23 +62,192 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.MetaData"
+                                "$ref": "#/definitions/models.Demo"
                             }
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "403": {
-                        "description": ""
+                        "description": "forbidden"
+                    },
+                    "500": {
+                        "description": "error server"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "demo"
+                ],
+                "description": "create demo",
+                "operationId": "DemoController.Create",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "x-user-id",
+                        "description": "user id call request",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for demo content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateDemoRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Demo"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "forbidden"
+                    },
+                    "500": {
+                        "description": "error server"
                     }
                 }
             }
         },
-        "/variant/": {
+        "/demo/{id}": {
             "get": {
                 "tags": [
-                    "variant"
+                    "demo"
+                ],
+                "description": "get demo by id",
+                "operationId": "DemoController.GetOne",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "id demo",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Demo"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "forbidden"
+                    },
+                    "500": {
+                        "description": "error server"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "demo"
+                ],
+                "description": "update the demo",
+                "operationId": "DemoController.Put",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "x-user-id",
+                        "description": "user id call request",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for station content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateDemoRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Demo"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "forbidden"
+                    },
+                    "500": {
+                        "description": "error server"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "demo"
+                ],
+                "description": "delete the demo",
+                "operationId": "DemoController.Delete",
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "x-user-id",
+                        "description": "user id call request",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to delete",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete demo id"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/graphql/": {
+            "get": {
+                "tags": [
+                    "graphql"
                 ],
                 "description": "get variants",
-                "operationId": "VariantController.GetAll",
+                "operationId": "GraphQLController.GetAll",
                 "parameters": [
                     {
                         "in": "header",
@@ -109,7 +298,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Variant"
+                                "$ref": "#/definitions/models.Temp"
                             }
                         }
                     },
@@ -123,13 +312,15 @@
                         "description": "error server"
                     }
                 }
-            },
+            }
+        },
+        "/graphql/login": {
             "post": {
                 "tags": [
-                    "variant"
+                    "graphql"
                 ],
                 "description": "create variant",
-                "operationId": "VariantController.Create",
+                "operationId": "GraphQLController.Create",
                 "parameters": [
                     {
                         "in": "header",
@@ -151,7 +342,7 @@
                         "description": "body for variant content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Variant"
+                            "$ref": "#/definitions/models.Temp"
                         }
                     }
                 ],
@@ -159,7 +350,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Variant"
+                            "$ref": "#/definitions/models.Temp"
                         }
                     },
                     "401": {
@@ -174,13 +365,13 @@
                 }
             }
         },
-        "/variant/{id}": {
+        "/graphql/{id}": {
             "get": {
                 "tags": [
-                    "variant"
+                    "graphql"
                 ],
                 "description": "get variant by id",
-                "operationId": "VariantController.GetOne",
+                "operationId": "GraphQLController.GetOne",
                 "parameters": [
                     {
                         "in": "header",
@@ -201,7 +392,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Variant"
+                            "$ref": "#/definitions/models.Temp"
                         }
                     },
                     "401": {
@@ -217,10 +408,10 @@
             },
             "put": {
                 "tags": [
-                    "variant"
+                    "graphql"
                 ],
                 "description": "update the variant",
-                "operationId": "VariantController.Put",
+                "operationId": "GraphQLController.Put",
                 "parameters": [
                     {
                         "in": "header",
@@ -249,7 +440,7 @@
                         "description": "body for station content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Variant"
+                            "$ref": "#/definitions/models.Temp"
                         }
                     }
                 ],
@@ -257,7 +448,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Variant"
+                            "$ref": "#/definitions/models.Temp"
                         }
                     },
                     "401": {
@@ -273,10 +464,10 @@
             },
             "delete": {
                 "tags": [
-                    "variant"
+                    "graphql"
                 ],
                 "description": "delete the variant",
-                "operationId": "VariantController.Delete",
+                "operationId": "GraphQLController.Delete",
                 "parameters": [
                     {
                         "in": "header",
@@ -308,19 +499,100 @@
         }
     },
     "definitions": {
-        "models.MetaData": {
-            "title": "MetaData",
+        "models.BaseModel": {
+            "title": "BaseModel",
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "creator_id": {
+                    "$ref": "#/definitions/uuid.UUID"
+                },
+                "deleted_at": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "id": {
+                    "$ref": "#/definitions/uuid.UUID"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "updater_id": {
+                    "$ref": "#/definitions/uuid.UUID"
+                }
+            }
+        },
+        "models.CreateDemoRequest": {
+            "title": "CreateDemoRequest",
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Demo": {
+            "title": "Demo",
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "created_at": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "creator_id": {
+                    "$ref": "#/definitions/uuid.UUID"
+                },
+                "deleted_at": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "id": {
+                    "$ref": "#/definitions/uuid.UUID"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "updater_id": {
+                    "$ref": "#/definitions/uuid.UUID"
+                }
+            }
+        },
+        "models.Temp": {
+            "title": "Temp",
             "type": "object"
         },
-        "models.Variant": {
-            "title": "Variant",
+        "models.UpdateDemoRequest": {
+            "title": "UpdateDemoRequest",
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "uuid.UUID": {
+            "title": "UUID",
             "type": "object"
         }
-    },
-    "tags": [
-        {
-            "name": "metadata",
-            "description": "MetaController operations for Meta\n"
-        }
-    ]
+    }
 }
